[package]
name = "traceroute-rs"
version = "0.1.0"
authors = ["Peter Malmgren <ptmalmgren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
nix = { git = "https://github.com/pmalmgren/nix", branch = "cmsg-moar-types" }
# nix = { path = "../nix" }
libc = "0.2"
